--- a/src/pages/AboutPage/AboutPage.css
+++ b/src/pages/AboutPage/AboutPage.css
@@ -3,7 +3,7 @@ display: relative;
 justify-content: flex-end;
 align-items: center;
 background-image: url('https://i.imgur.com/7TVmWir.png');
-width: 1410px;
+max-width: 2000px;
 height: 400px;
 background-size: cover;
 background-position: center;
@@ -20,9 +20,8 @@ margin-top: 40px;
 
 .about-title {
 position: absolute;
-top: 50%;
-right: 50px;
-transform: translateY(-50%);
+top: 30%;
+right: 20px;
 background-color: rgba(239, 235, 232, 0.8);
 font-family: "EB Garamond", serif;
 padding: 3rem;
@@ -30,7 +29,7 @@ color: #737373;
 }
 
 .about-paragraph {
-position: fixed;
+position: absolute;
 top: 80%;
 right: 40px;
 transform: translateY(-50%);
