--- a/src/pages/PlanPage/PlanPage.css
+++ b/src/pages/PlanPage/PlanPage.css
@@ -1,20 +1,33 @@
 .plan-bg {
     display: flex;
+    background-image: url('https://i.imgur.com/xsSI8AO.png');
+    margin-top: 4rem;
+    font-family: "EB Garamond", serif;
 }
 
 .event-list {
-    margin-top: 2rem;
-    flex: 0 0 20rem;
+    margin-top: 4rem;
+    flex: 0 0 30rem;
     margin-right: 1rem;
+    overflow: auto;
+    background-color: RGBA(239, 237, 241, 0.8);
+    border-radius: 30px;
+    border: solid 1px #545454;
+    text-align: left;
+    font-family: "EB Garamond", serif;
 }
 
 .selected-plan {
     flex: 1;
-    width: 3rem;
+    width: 2em;
     background-color: RGBA(239, 237, 241, 0.8);
+    border-radius: 30px;
+    border: solid 1px #545454;
     text-align: left;
-    padding: 2rem;
-    margin-top: 2rem;
-    overflow-y: auto;
-    overflow-x: auto;
+    align-items: center;
+    justify-content: center;
+    padding: 3rem;
+    margin-top: 4rem;
+    overflow: auto;
+    font-family: "EB Garamond", serif;
 }
