--- a/src/pages/AboutPage/AboutPage.css
+++ b/src/pages/AboutPage/AboutPage.css
@@ -1,47 +1,57 @@
 .hero-img {
-display: relative;
-justify-content: flex-end;
-align-items: center;
-background-image: url('https://i.imgur.com/7TVmWir.png');
-max-width: 2000px;
-height: 400px;
-background-size: cover;
-background-position: center;
+    display: relative;
+    justify-content: flex-end;
+    align-items: center;
+    background-image: url('https://i.imgur.com/7TVmWir.png');
+    max-width: 2000px;
+    height: 400px;
+    background-size: cover;
+    background-position: center;
 }
 
 .left-img {
-background-image: url('https://i.imgur.com/uiXQcQv.png');
-width: 600px;
-height: 400px;
-background-size: cover;
-background-position: center;
-margin-top: 40px;
+    background-image: url('https://i.imgur.com/uiXQcQv.png');
+    max-width: 600px;
+    height: 400px;
+    background-size: cover;
+    background-position: center;
+    margin-top: 30px;
 }
 
 .about-title {
-position: absolute;
-top: 30%;
-right: 20px;
-background-color: rgba(239, 235, 232, 0.8);
-font-family: "EB Garamond", serif;
-padding: 3rem;
-color: #737373;
+    position: absolute;
+    top: 30%;
+    right: 20px;
+    background-color: rgba(239, 235, 232, 0.8);
+    border-radius: 10px;
+    font-family: "EB Garamond", serif;
+    padding: 3rem;
+    color: #737373;
 }
 
 .about-paragraph {
-position: absolute;
-top: 80%;
-right: 40px;
-transform: translateY(-50%);
-width: 800px; 
-padding: 20px;
+    position: absolute;
+    text-align: center;
+    font-size: 20px;
+    font-family: "EB Garamond", serif;
+    margin-top: 6rem;
+    right: 50px;
+    width: 800px; 
+    padding: 20px;
+    color: #737373;
 }
 
-.second-paragraph {
-position: fixed;
-top: 80%;
-right: 40px;
-transform: translateY(-50%);
-width: 800px; 
-padding: 20px;
+.second-par > .about-paragraph {
+    margin-top: 1rem;
+}
+
+@media (max-width: 768px) {
+    .about-paragraph {
+        position: relative;
+        margin-top: 2rem;
+        right: 0;
+        width: auto;
+        text-align: left;
+        padding: 1rem;
+    }
 }
