--- a/src/index.css
+++ b/src/index.css
@@ -121,7 +121,7 @@ button, a.button {
   margin: 1vmin;
   padding: 1vmin;
   color: var(--white);
-  background-color: var(--orange);
+  background-color: #d3bcad;
   font-size: 2vmin;
   font-weight: bold;
   text-decoration: none;
@@ -131,6 +131,22 @@ button, a.button {
   outline: none;
   cursor: pointer;
 }
+
+button, a.button {
+  margin: 1vmin;
+  padding: 1vmin;
+  color: var(--white);
+  background-color: #d3bcad;
+  font-size: 2vmin;
+  font-weight: bold;
+  text-decoration: none;
+  text-align: center;
+  border: .1vmin solid var(--tan-2);
+  border-radius: .5vmin;
+  outline: none;
+  cursor: pointer;
+}
+
 
 button.btn-sm {
   font-size: 1.5vmin;
