--- a/src/components/CaterersList/CaterersList.css
+++ b/src/components/CaterersList/CaterersList.css
@@ -17,7 +17,7 @@
 
 .services-list h3{
     font-family: "EB Garamond", serif;
-    color: #737373;
+    color: #1b1a1a;
     text-align: center;
 }
 
