--- a/src/components/VenueDetails/VenueDetails.css
+++ b/src/components/VenueDetails/VenueDetails.css
@@ -2,9 +2,10 @@
     display: flex;
     flex: 0 0 30rem;
     flex-direction: column;
+    text-align: left;
     align-items: center;
     justify-content: center;
-    background-color: RGBA(239, 237, 241, 0.9);
+    background-color: RGBA(239, 237, 241, 1);
     border-radius: 30px;
     border: solid 1px #545454;
     padding: 3rem;
