--- a/src/pages/AboutPage/AboutPage.css
+++ b/src/pages/AboutPage/AboutPage.css
@@ -34,14 +34,18 @@
     text-align: center;
     font-size: 20px;
     font-family: "EB Garamond", serif;
-    margin-top: 6rem;
+    margin: 4rem 0;
     right: 50px;
     width: 800px; 
     padding: 20px;
     color: #737373;
 }
 
-.second-par > .about-paragraph {
+.second-par {
+    margin-top: 1rem;
+}
+
+.third-par {
     margin-top: 1rem;
 }
 
